# flare

./: .gitignore  Cargo.toml  Makefile  PUBLISHING.md  README.md  volo.txt
deploy/: docker-compose.yaml
doc/: architecture.md
doc/images/: im_architecture.drawio
flare/: Cargo.toml
flare-core/: Cargo.toml  README.md  build.rs
flare-core/proto/: net.proto
flare-core/src/: lib.rs
flare-core/src/context/: context.rs
flare-core/src/error/: error.rs  mod.rs
flare-core/src/net/: flare.net.rs  mod.rs
flare-im-core/: Cargo.toml  README.md
flare-im-core/certs/: key.pem
flare-im-core/certsold/: cert.pem  key.pem
flare-im-core/examples/: chat.rs  chatroom_client.rs  chatroom_server.rs  quic_chat.rs
flare-im-core/src/client/: client.rs  config.rs  handlers.rs  message_handler.rs  mod.rs  sys_handler.rs
flare-im-core/src/connections/: connection.rs
flare-im-core/src/connections/quic/: config.rs  conn.rs
flare-im-core/src/connections/ws/: conn.rs
flare-im-core/src/server/: auth_handler.rs  handlers.rs  mod.rs  server.rs  server_handler.rs  sys_handler.rs
flare-im-core/src/telecom/: client.rs  mod.rs  server.rs
flare-rpc-core/: Cargo.toml  README.md
flare-rpc-core/examples/: echo_client.rs  echo_server.rs
flare-rpc-core/proto/: echo.proto
flare-rpc-core/src/: lib.rs
flare-rpc-core/src/app/: app.rs  tests.rs
flare-rpc-core/src/client/: call.rs  client.rs
flare-rpc-core/src/discover/: discover.rs  mod.rs
flare-rpc-core/src/discover/consul/: discover.rs  mod.rs  tests.rs
flare-rpc-core/src/discover/etcd/: discover.rs  mod.rs
flare-rpc-core/src/interceptor/: ctxinterceprot.rs  mod.rs
flare/src/context/: context.rs  mod.rs
flare/src/error/: error.rs
grpc_core/: Cargo.toml
grpc_core/src/: lib.rs
grpc_core/src/discover/: mod.rs  registry.rs
grpc_core/src/discover/consul/: discover.rs  mod.rs  registry.rs  tests.rs
grpc_core/src/discover/etcd/: discover.rs  tests.rs
im_core/: Cargo.toml  Makefile  README.md
im_core/certs/: cert.pem
im_core/examples/: chat.rs  chatroom_client.rs  chatroom_server.rs  quic_chat.rs
im_core/examples/chatroom_client/: Cargo.toml
im_core/examples/chatroom_server/: Cargo.toml
im_core/src/: error.rs  lib.rs
im_core/src/client/: client.rs  config.rs  handlers.rs  message_handler.rs  sys_handler.rs
im_core/src/common/: mod.rs
im_core/src/common/ctx/: context.rs  extensions.rs  mod.rs  traits.rs
im_core/src/common/error/: error.rs
im_core/src/connections/: connection.rs  mod.rs
im_core/src/connections/quic/: config.rs  conn.rs  mod.rs
im_core/src/connections/ws/: conn.rs
im_core/src/quic/: conn.rs
im_core/src/server/: auth_handler.rs  handlers.rs  server.rs  server_handler.rs  sys_handler.rs
im_core/src/telecom/: client.rs  mod.rs  server.rs
im_core/src/ws/: mod.rs
im_core/tests/: ws_test.rs
protobuf-codegen/: Cargo.toml  README.md  build.rs
protobuf-codegen/proto/: net.proto
protobuf-codegen/src/: lib.rs
protobuf-codegen/src/flare_gen/: flare.net.rs  mod.rs
rpc_core/: Cargo.toml  README.md  build.rs
rpc_core/examples/: echo_client.rs  echo_server.rs
rpc_core/src/: lib.rs
rpc_core/src/app/: app.rs  mod.rs  tests.rs
rpc_core/src/client/: call.rs  client.rs  mod.rs  tests.rs
rpc_core/src/discover/: discover.rs  mod.rs  registry.rs
rpc_core/src/discover/consul/: discover.rs  mod.rs  registry.rs  tests.rs
rpc_core/src/discover/etcd/: discover.rs  mod.rs  registry.rs  tests.rs
rpc_core/src/interceptor/: ctxinterceprot.rs  mod.rs
src/: lib.rs
