[package]
name = "flare"
version = "0.1.0"
edition = "2021"

[lib]
name = "flare"
path = "src/lib.rs"

[workspace]
members = [
    "im_core",
    "protobuf-codegen"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pilota = "0.11"

tokio-tungstenite = { version = "0.26", features = ["connect"] }
futures = "0.3"
rcgen = "0.13"

bytes = "1.10.0"
url = "2.5"
pin-project-lite = "0.2"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0.11"
prost = "0.13.5"
prost-build = "0.13.5"

#quic
quinn = "0.11.5"
rustls  = "0.23.5"
rustls-pemfile = "2"


# 日志
chrono="0.4"
log = "0.4"
env_logger = "0.11"
flate2 = { version = "1.0"}