[workspace]
members = [
    "flare-core",
    "flare-im-core",
    "flare-rpc-core",
]
resolver = "2"

[workspace.package]
authors = ["flare Team <flare1522@163.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85.0"
description = "A high performance IM framework"  # 项目描述
homepage = "https://github.com/flare152/flare"  # 项目主页
repository = "https://github.com/flare152/flare"  # 代码仓库
documentation = "https://docs.rs/flare"  # 文档地址


[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"

bytes = "1.10.0"
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0.11"
prost = "0.13.5"
prost-build = "0.13.5"


#websocket
tokio-tungstenite = { version = "0.26", features = ["connect"] }

#quic
quinn = "0.11.5"
rustls  = "0.23.5"
rustls-pemfile = "2"

# 日志
chrono="0.4"
log = "0.4"
env_logger = "0.11"

# grpc
tonic= "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.12"
async-broadcast = "0.7"
dashmap = "6.1"
etcd-client = "0.14"
rand = "0.9"
tonic-build = "0.12"
once_cell = "1.20"
tower = "0.5"
