[package]
name = "flare-im-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A high performance instant messaging core library for Flare framework"
license = "MIT"
repository = "https://github.com/flare152/flare"
documentation = "https://docs.rs/flare-im-core"
readme = "README.md"
keywords = ["im", "websocket", "quic", "async", "network"]
categories = ["network-programming"]

[features]
default = ["client", "server"]
client = [
    "tokio-tungstenite",
    "quinn",
    "rustls",
    "rustls-pemfile",
]
server = [
    "tokio-tungstenite",
    "quinn",
    "rustls",
    "rustls-pemfile",
]
full = ["client", "server"]

[dependencies]
flare-core = { version = "0.1.0",  path = "../flare-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }

log = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

# websocket
tokio-tungstenite = { workspace = true, optional = true }
#quic

quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time", "io-std", "io-util"] }
env_logger = { workspace = true }
anyhow = { workspace = true }
