[package]
name = "flare"
version = "0.1.0"
edition = "2021"
authors = ["flare Team <flare1522@163.com>"]
description = "A high performance IM framework core library"
license = "MIT"
repository = "https://github.com/flare152/flare"
documentation = "https://docs.rs/flare"
readme = "README.md"
keywords = ["im", "framework", "async", "network"]
categories = ["network-programming"]

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
protobuf-codegen = { path = "../protobuf-codegen", version = "0.1.0" }

# websocket
tokio-tungstenite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
env_logger = { workspace = true }