[package]
name = "grpc_core"
version.workspace = true
edition.workspace = true

[dependencies]
volo = { workspace = true }
volo-grpc = { workspace = true }
pilota = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-broadcast = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
reqwest = { version = "0.12.12", features = ["json"] }