[package]
name = "protobuf-codegen"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Generated protobuf code for Flare"
license = "MIT"

[dependencies]
prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }