[package]
name = "rpc_core"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
flare = { version = "0.1.0",  path = "../flare" }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
etcd-client = {workspace = true}
uuid = { workspace = true}
tonic = { workspace = true }
rand = { workspace = true}
prost = {workspace = true}
env_logger = { workspace = true}
tower = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"

[[example]]
name = "echo_client"
path = "examples/echo_client.rs"
